<resources>

    <string name="app_name">TravelFriend</string>
    <string name="api_key">Developers take care of masking the key when you checkin</string>
    <string name="admob_unit_id">ca-app-pub-6444812742298351/7185858226</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="atm">ATM</string>
    <string name="car_repair">Repair Pal</string>
    <string name="fuel_pump">Fuel Station</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="rest_room">Restroom</string>
    <string name="restaurant">Restaurant</string>
    <string name="share_location">Share Location</string>
    <string name="sos">SOS</string>
    <string name="tow">Tow Away</string>
    <string name="about_us_description">TravelFriend is the traveller\'s online friend helping them during their journey in case of need or emergency. TravelFriend app is designed for end users to search and navigate to the nearest Hospitals, Pharmacies, ATMs, Fuel Stations, Restaurants, Rest Rooms and also provides emergency contact details for Ambulances, Towing and other Emergency Services. Traveller\’s can also share their location with their emergency contacts. TravelFriend auto detects the user\’s location by GPS or by Network Services and collects data from various online resources on a best effort basis.  TravelFriend does not provide in-house data.\n\nTerms &#038; Usage \nGoogle API Privacy Policy : \nhttp://www.google.com/policies/privacy \nGoogle APT Terms of use : \nhttp://www.google.com/intl/en/policies/terms \n\n</string>

</resources>